tests/common/compile-error/01_domain_frame_syntax.fpy
@@target python_3

# NEGATIVE TEST: Frame syntax in domain should fail Python
# Expected error: SyntaxError: invalid syntax

@@system NegativeTest {
    machine:
        $Ready { }
    domain:
        var count: int = 0
}

if __name__ == '__main__':
    pass
